# MacroMind

./: .gitignore  CMakeLists.txt  DailyLog.cpp  DailyLog.h  Food.cpp  Food.h  FoodDatabase.cpp  FoodDatabase.h  MacroGoals.cpp  MacroGoals.h  README.md  dailyTrackingDriver.cpp  foodDatabaseDriver.cpp  foods.csv  macroMind.cpp
